# mapswipe-backend

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  bulk_ignore_pyright_warnings.py  cliff.toml  conftest.py  docker-compose.yaml  manage.py  pre-push.sh  pyproject.toml  pytest.ini  release.sh  schema.graphql
.github/: dependabot.yaml  gh-docker-compose.yaml
.github/workflows/: ci.yml  helm-publish.yml  release.yml
apps/common/: admin.py  filters.py  firebase.py  mixins.py  models.py  serializers.py  tasks.py  types.py  utils.py  views.py
apps/common/firebase/: base.py  push.py
apps/common/graphql/: dataloaders.py  inputs.py  queries.py  types.py
apps/common/migrations/: 0001_initial.py  0002_announcement.py  0002_initial.py  0003_alter_announcement_firebase_id.py
apps/common/tests/: common_test.py  firebase_auth_test.py  health_check_test.py  pagination_test.py
apps/community_dashboard/: apps.py  factories.py  models.py  tasks.py
apps/community_dashboard/graphql/: queries.py  types.py
apps/community_dashboard/migrations/: 0001_initial.py  0002_initial.py
apps/community_dashboard/tests/: query_test.py
apps/contributor/: admin.py  apps.py  factories.py  firebase.py  models.py  serializers.py  tasks.py
apps/contributor/firebase/: pull.py  push.py  sql.py  utils.py
apps/contributor/graphql/: filters.py  inputs.py  mutations.py  orders.py  queries.py  types.py
apps/contributor/migrations/: 0001_initial.py  0002_initial.py  0003_alter_contributorteam_firebase_id_and_more.py  0003_alter_contributorusergroup_client_id.py  0003_rename_old_user_group_id_contributorusergroup_old_id.py  0004_alter_contributoruser_user_id.py  0004_contributorteam_contributoruser_team.py  0005_alter_contributoruser_team.py  0005_alter_contributorusergroup_archived_by.py  0006_alter_contributorusergroup_managers_and_more.py  0006_contributorteam_firebase_last_pushed_and_more.py  0007_contributorteam_canonical_id.py  0008_alter_contributoruser_managers_and_more.py  0009_remove_contributorteam_canonical_id_and_more.py  0010_remove_contributoruser_user_id_and_more.py  0011_alter_contributorusergroupmembership_unique_together.py  0012_contributorusergroupmembershiplogtemp.py
apps/contributor/tests/: contributor_team_test.py  e2e_test.py  e2e_usergroup_test.py  firebase_test.py  mutation_test.py
apps/existing_database/: models.py
apps/mapping/: apps.py  factories.py  models.py  tasks.py
apps/mapping/firebase/: firebase.py  pull.py  utils.py
apps/mapping/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mappingsession_app_version.py  0003_alter_mappingsession_managers_and_more.py  0003_mappingsession_old_id_mappingsessionresult_old_id.py  0004_alter_mappingsession_unique_together_and_more.py  0004_alter_mappingsessionresult_unique_together_and_more.py  0004_mappingsessionresult_reference_and_more.py  0004_mappingsessionresulttemp_mappingsessionusergrouptemp_and_more.py  0005_mappingsessionresulttemp_contributor_user_id_and_more.py
apps/mapping/tests/: pull_from_firebase_test.py
apps/project/: admin.py  custom_options.py  dummy_slack_client.py  factories.py  firebase.py  models.py  serializers.py  slack_messages.py  tasks.py
apps/project/asset/: find_geojson.geojson
apps/project/exports/: exports.py  geojson.py  mapping_results.py  overall_stats.py  project_stats_by_date.py  project_task_groups.py  project_tasks.py  tasking_manager_geometries.py
apps/project/firebase/: push.py
apps/project/graphql/: dataloaders.py  filters.py  inputs.py  mutations.py  orders.py  queries.py  types.py
apps/project/migrations/: 0001_initial.py  0002_initial.py  0003_alter_organization_client_id_alter_project_client_id_and_more.py  0003_project_slack_thread_ts.py  0003_rename_old_project_id_project_old_id_and_more.py  0004_alter_project_max_tasks_per_user.py  0004_alter_project_project_type.py  0004_alter_projecttask_geometry.py  0004_project_slack_progress_notifications.py  0004_projecttask_old_id_projecttaskgroup_old_id.py  0005_alter_project_options_rename_name_project_topic_and_more.py  0005_merge_20251001_0845.py  0005_organization_description.py  0005_project_firebase_last_pushed_and_more.py  0005_project_team_project_is_private.py  0005_rename_organization_project_requesting_organization_and_more.py  0007_projectasset_file_size.py  (+72 more)
apps/tutorial/: admin.py  apps.py  factories.py  models.py  serializers.py  tasks.py
apps/user/: admin.py  factories.py  managers.py  models.py
docs/adr/: 0001-rename-locate-features-to-locate-objects.md
helm/: Chart.yaml  linter_values.yaml  values-test.yaml  values.yaml
main/: __init__.py  asgi.py  bulk_managers.py  cache.py  celery.py  checks.py  config.py  cronjobs.py  db.py  fields.py  logging.py  middlewares.py  sentry.py  settings.py  urls.py  wsgi.py
main/graphql/: dataloaders.py  enums.py  schema.py
main/tests/: __init__.py  base_test.py  fake_test.py
misc/: bpython.config  run_tests.sh
misc/dev/: run_web.sh  run_worker.sh  run_worker_beat.sh
misc/prod/: run_web.sh  run_worker.sh  run_worker_beat.sh
project_types/: firebase.py  store.py
project_types/base/: project.py  tutorial.py
project_types/conflation/: project.py  tutorial.py
project_types/street/: api_calls.py  project.py  tutorial.py
project_types/tests/: validate_api_calls_test.py
project_types/validate/: api_calls.py  project.py  tutorial.py
project_types/validate_image/: project.py  tutorial.py
test_data/organization/: data.json
test_data/project/: create_find_project.json
test_data/usergroup/: usergroup.json
typings/: django_choices_field.pyi
utils/: celery.py  common.py  fields.py  firebase.py  git.py  slack.py  spatial_sampling.py
utils/asset_types/: models.py
utils/custom_options/: models.py
utils/geo/: tile_functions.py  tile_grouping.py  transform.py
utils/graphql/: common.py  drf.py  inputs.py  monkey_patches.py  monkey_patches_printer.py  mutations.py  pagination.py  types.py
utils/tests/: common_test.py  geo_test.py  spatial_sampling_test.py
(+160 files in other folders)
