[project]
name = "mapswipe-backend"
version = "0.1.0"
description = "Backend for Mapswipe"
authors = [
  {name = "Mapswipe", email = "info@mapswipe.org"},
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = "~=3.13.2"

dependencies = [
    "Django~=5.1.6",
    "celery[redis]~=5.4.0",
    "flower", # celery-dashboard
    "django-celery-beat",
    "django-cors-headers",
    "django-cte",
    "django-environ",
    "django-premailer",
    "django-redis",
    "django-storages",
    "djangoql", # Admin panel query search
    "djangorestframework",
    "factory-boy~=3.2.1",
    "gunicorn~=20.1.0",
    "psycopg2-binary",
    "sentry-sdk",
    "strawberry-graphql-django~=0.57.0",
    "django-choices-field", # Required by strawberry-graphql-django
    "django-health-check",
    "pillow", # Required by django ImageField
    "pydantic==2.10.6",
    # Geo (Used by utils/geo)
    "gdal==3.6.2", # NOTE: version depends on the available libgdal-dev version in debian
    "ogr",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "django-stubs",
    "djangorestframework-stubs>=3.15.3",
    "celery-types",
    "types-factory-boy>=0.4.1",
    "ipython",
    "colorlog",
]
test = [
    "pytest-django",
    "pytest-icdiff",
    "pytest-ordering",
    "pytest-profiling",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
log_cli = true

[tool.ruff]
line-length = 125
extend-exclude = [
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "**/migrations/*",
    "__pycache__",
]

[tool.ruff.lint]
flake8-builtins.builtins-strict-checking = false
ignore = [
    "C901",
    "E701",
    "E203",
    "DJ001",
    "G201", # FIXME(thenav56): Check if we can enable this and keep sending logs to sentry
]
extend-select = ["I", "E", "F", "B", "A", "W", "DJ", "AIR", "COM", "INT", "ISC", "ICN", "LOG", "G", "T20", "TID", "PT", "Q", "RET", "SIM", "TC", "PTH", "UP"]
# TODO(thenav56): Use this instead `select = ["ALL"]` and add rules to ignore
#   ruff check --statistics ./

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"/**/tests/*_mock_data.py" = ["E501"]
"**/snap_test_*.py" = ["E501"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]
typeCheckingMode = "standard"
analyzeUnannotatedFunctions = true
enableReachabilityAnalysis = true
strictDictionaryInference = true
strictListInteference = true
strictSetInference = true
reportCallInDefaultInitializer = "information"
reportConstantRedefinition = "error"
reportDeprecated = "information"
reportDuplicateImport = "warning"
reportImplicitOverride = "error"
reportImplicitStringConcatenation = "none"
reportImportCycles = "warning"
reportInconsistentConstructor = "warning"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportPrivateImportUsage = "error"
